<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Title Store</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="type">Media type</string>
    <string name="favorite">Favorite</string>
    <string name="cover">Cover</string>
    <string name="add">Add</string>
    <string name="content">Content</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="list">Lists</string>    
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="signup">Sign up</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="username">User name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="logo">Logo</string>
    <string name="delete">Delete</string>
    <string name="sign_up_link">You don\'t have an account? Sign up here!</string>
    <string name="login_in_link">Go back to Login-Screen!</string>
    <string name="welcome">Welcome User :)</string>
    <string name="type_dialog_message">Choose the type of your media</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_login">Enter your E-mail and password</string>
    <string name="sign_up">Enter your personal data</string>

    <string-array name="item_types">
        <item>Album</item>
        <item>Book</item>
        <item>Movie</item>
    </string-array>

</resources>