<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000022"
        android:paddingBottom="@dimen/app_padding_8dp"
        android:paddingLeft="@dimen/app_padding_8dp"
        android:paddingRight="@dimen/app_padding_8dp"
        android:paddingTop="@dimen/app_padding_8dp" >

        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="24dp" >

            <TextView
                android:id="@+id/tv_login_link"
                style="@style/textViewForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/login_in_link" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp" >
            
            <TextView
                android:id="@+id/tv_signUp"
                style="@style/textViewForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/et_firstname"
                android:layout_alignParentTop="true"
                android:text="@string/sign_up" />

            <EditText
                android:id="@+id/et_firstname"
                style="@style/editTextForm.textStyle.input"
                android:layout_below="@+id/tv_signUp"
                android:hint="@string/firstname"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/et_lastname"
                style="@style/editTextForm.textStyle.input"
                android:layout_below="@+id/et_firstname"
                android:hint="@string/lastname"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_username"
                style="@style/editTextForm.textStyle.input"
                android:layout_below="@+id/et_lastname"
                android:hint="@string/username"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_email"
                style="@style/editTextForm.textStyle.input"
                android:layout_below="@+id/et_username"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_password"
                style="@style/editTextForm.textStyle.input"
                android:layout_below="@+id/et_email"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/et_confirmPassword"
                style="@style/editTextForm.textStyle.input"
                android:layout_below="@+id/et_password"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_signup"
                style="@style/buttonForm.textStyle.big"
                android:layout_below="@+id/et_confirmPassword"
                android:text="@string/signup" />
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>