<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/styles_gradient"
        android:paddingBottom="@dimen/app_padding_8dp"
        android:paddingLeft="@dimen/app_padding_8dp"
        android:paddingRight="@dimen/app_padding_8dp"
        android:paddingTop="@dimen/app_padding_8dp" >

        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="32dp" >

            <TextView
                android:id="@+id/tv_signup_link"
                style="@style/linkStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"                
                android:text="@string/sign_up_link" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/footer"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="100dp" >

            <EditText
                android:id="@+id/et_email"
                style="@style/inputStyle.inputTextStyle.input"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_password"
                style="@style/inputStyle.inputTextStyle.input"
                android:layout_below="@+id/et_email"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_login"
                style="@style/btnStyle.btnTextStyle.btnBig"
                android:layout_below="@+id/et_password"
                android:text="@string/login" />
        </RelativeLayout>

    </RelativeLayout>

</ScrollView>