<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/iv_cover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/app_margin"
        android:contentDescription="@string/cover"
        android:src="@drawable/ic_launcher" />

    <Spinner
        android:id="@+id/spinner_itemTypeInDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_margin="@dimen/app_margin"
        android:layout_below="@+id/iv_cover" />

    <TextView
        android:id="@+id/tv_typeDialogMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iv_cover"
        android:layout_margin="@dimen/app_margin"
        android:layout_toRightOf="@+id/iv_cover"
        android:text="@string/type_dialog_message"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_saveItemType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/app_margin"
        android:layout_below="@+id/spinner_itemTypeInDialog"
        android:text="@string/save" />

</RelativeLayout>